frame/support/test/tests/benchmark_ui/bad_return_non_benchmark_err.stderr
error: expected `BenchmarkError`
  --> tests/benchmark_ui/bad_return_non_benchmark_err.rs:10:27
   |
10 |     fn bench() -> Result<(), BenchmarkException> {
   |                              ^^^^^^^^^^^^^^^^^^
